@@ -25,7 +25,6 @@ TECH
    *. keep reviewing and updating the GameOverview.html doc
 
 NON-TECH
-   *. ShopKeeper VIEW should give more information about boats
    *. Wants and Needs engine - similar to slavery system
    *. Start on Spells
    *. RandomQuests based off the Percolator engine -- a way to randomly generate different quests.
